@@ -14,6 +14,8 @@
        `(let ((x (,(conc "vector") 100 101)))
 	  (print x)
 	  (assert (= 100 (,(conc "vector-ref") x 0)))
+          (assert (,(conc "vector?") x))
+          (assert (number-vector? x))
 	  (,(conc "vector-set!") x 1 99)
 	  (assert (= 99 (,(conc "vector-ref") x 1)))
 	  (assert (= 2 (,(conc "vector-length") x)))
@@ -30,3 +32,13 @@
 (test1 s32)
 (test1 f32)
 (test1 f64)
+
+;; Test implicit quoting/self evaluation
+(assert (equal? #u8(1 2 3) '#u8(1 2 3)))
+(assert (equal? #s8(-1 2 3) '#s8(-1 2 3)))
+(assert (equal? #u16(1 2 3) '#u16(1 2 3)))
+(assert (equal? #s16(-1 2 3) '#s16(-1 2 3)))
+(assert (equal? #u32(1 2 3) '#u32(1 2 3)))
+(assert (equal? #s32(-1 2 3) '#s32(-1 2 3)))
+(assert (equal? #f32(1 2 3) '#f32(1 2 3)))
+(assert (equal? #f64(-1 2 3) '#f64(-1 2 3)))
