@@ -20,6 +20,8 @@
 - Syntax
   - Added the aliases "&optional" and "&rest" as alternatives to "#!optional"
     and "#!rest" in type-declarations (suggested by Joerg Wittenberger).
+  - Vectors, SRFI-4 number vectors and blobs are now self-evaluating for
+     R7RS compatibility.  Being literal constants, they are implicitly quoted.
 
 - Compiler
   - the "inline" declaration does not force inlining anymore as recursive
